# real_estate_rent_avito

./: .gitignore  README.md  __init__.py  analys.ipynb  compose.yml  cron  dockerfile  featuring.ipynb  ops.yaml  ops_all.yaml  parse.py  pipeline.py  pyproject.toml  readme.md  req.txt  tt.ipynb  utils.py  workspace.yaml
data/: avito_agency_db.duckdb  avito_builder_db.duckdb  avito_real_estate.db  dagster_avito.db  home_parse.ipynb
jobs/: avito_dbd.py
notebooks/: cian_helthcheck.ipynb  examples.ipynb  geofeatures.ipynb  home_features.ipynb  price_of_mortgage.ipynb  selenium_test.ipynb  test.ipynb  tt.ipynb
ops/: get_avito_start_data.py  parse_avito_data.py  suppport_funcs.py
params/: rent_yaml.yaml
repositories/: avito_parse_rep.py
repositories/jobs/: avito_dbd.py
repositories/jobs/ops/: parse_avito_data.py  support_funcs.py
schedules/: rent_avito_schedule.py
tmpfomfpxx5/history/: runs.db
tmpfomfpxx5/history/runs/: 4c4f27d4-6996-4769-8ae6-741c715982fc.db  index.db
tmpfomfpxx5/storage/4c4f27d4-6996-4769-8ae6-741c715982fc/compute_logs/: get_avito_page.err
